[project]
name = "online-dsp"
version = "0.1.0"
description = "Online Digital Signal Processing and Source Separation"
readme = "README.md"
authors = [
    { name = "fujii-yjc", email = "fujii.koshi.2027@gmail.com" }
]
requires-python = ">=3.10"

dependencies = [
    "jupyterlab>=4.5.9",
    "matplotlib>=3.9.4",
    "numpy>=1.20.0",
    "pyroomacoustics>=0.7.0",
    "scipy>=1.7.0",
    "soundfile>=0.10.0",
    "resampy>=0.4.0",
    "numba>=0.59.0",
    "sounddevice>=0.5.5",
]

[project.scripts]
online-dsp = "online_dsp.main:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
